Better sounds + part of orc

--- a/Final Gauntlet/Final Gauntlet.csproj
+++ b/Final Gauntlet/Final Gauntlet.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +45,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -81,37 +83,51 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\416632__sirkoto51__castle-music-loop-1.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\slime.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\slime %281%29.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\detailedwerewolf %281%29.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\attack.wav" />
+    <None Include="Resources\attack.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\defend.wav" />
+    <None Include="Resources\backgroundmusic.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\fire.wav" />
+    <None Include="Resources\gameover.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\heal.wav" />
+    <None Include="Resources\defend.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\gameover.wav" />
+    <None Include="Resources\fire.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\enemydeath.wav" />
+    <None Include="Resources\heal.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\victory.wav" />
+    <None Include="Resources\enemydeath.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\victory.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\orc1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
